# paracpp

./: .gitignore  CMakeLists.txt  ReadMe.md  vscode-cmake-kit.json
book/: CMakeLists.txt
conan/: conanfile.txt
conan/profile/linux/: clang  gcc
conan/profile/macos/: clang  clang-brew
conan/profile/windows/: clang
src/: CMakeLists.txt
src/c_pointers/: CMakeLists.txt
src/pthreads/: CMakeLists.txt  pthr.cc  pthr3.cc
